[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 321.0
margin_right = 549.0
margin_bottom = 600.0
alignment = 1

[node name="Join" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 264.0
margin_right = 228.0
margin_bottom = 284.0
text = "Join"

[node name="Leave" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 228.0
margin_bottom = 308.0
text = "Leave"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 312.0
margin_right = 228.0
margin_bottom = 336.0

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 74.0
margin_bottom = 19.0
text = "Username: "

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 78.0
margin_right = 228.0
margin_bottom = 24.0
rect_min_size = Vector2( 150, 0 )

[node name="Users" type="Label" parent="HBoxContainer"]
margin_left = 553.0
margin_top = 293.0
margin_right = 703.0
margin_bottom = 307.0
rect_min_size = Vector2( 150, 0 )
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Leave" to="." method="_on_Leave_pressed"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/HBoxContainer/LineEdit" to="." method="_on_username_change"]
